--- a/frontend/src/app/core/styles/root.element.scss
+++ b/frontend/src/app/core/styles/root.element.scss
@@ -1,6 +1,6 @@
 @import 'config/styles/variables.const';
 :root {
-	background: $bg-view;
+	// background: $bg-view;
 
 	&, >body {
 	    width: 100%;
