--- a/frontend/src/app/views/root/root.style.scss
+++ b/frontend/src/app/views/root/root.style.scss
@@ -1,9 +1,9 @@
 @import 'src/config/styles/variables.const';
 
 body {
-    background-color: $bg-win;
+    // background-color: $bg-win;
     :host {
-        background-color: $bg-view;
+        // background-color: $bg-view;
         display: flex;
         >div {
             flex-grow: 1;
