--- a/frontend/src/app/views/root/components/global-footer/global-footer.template.html
+++ b/frontend/src/app/views/root/components/global-footer/global-footer.template.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="mat-elevation-z4">
-    <p [innerHtml]="'COPYRIGHT_NOTICE' | i18n"></p>
+    <slot [innerHtml]="'COPYRIGHT_NOTICE' | i18n"></slot>
 </mat-toolbar>
