--- a/frontend/src/app/core/styles/material/material.class.scss
+++ b/frontend/src/app/core/styles/material/material.class.scss
@@ -1,2 +1,3 @@
-.light-theme {@include angular-material-theme($light-theme);}
-.dark-theme  {@include angular-material-theme($dark-theme);}
+@include mat-core($app-typography); // The common styles for Angular Material
+.light-theme {@include angular-material-theme($app-light-theme);}
+.dark-theme  {@include angular-material-theme($app-dark-theme);}
