--- a/frontend/src/app/core/styles/material/material.module.scss
+++ b/frontend/src/app/core/styles/material/material.module.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import 'config/styles/material/typography.const';
 @import 'config/styles/material/themes.const';
-@import 'material.element';
 @import 'material.class';
+@import 'material.element';
