Got DatetimePipe working for Theodian

--- a/frontend/src/app/views/home/home.template.html
+++ b/frontend/src/app/views/home/home.template.html
@@ -1,3 +1,3 @@
 <h2  [innerHtml]="'INTRO_HEADER' | i18n"></h2>
-<p   [innerHtml]="'2010-04-22'   | datetime"></p>
+<p   [innerHtml]="'2010-04-22'   | datetime: {format: 'short'}"></p>
 <div [innerHtml]="'INTRO_BODY'   | i18n"></div>
