--- a/frontend/src/config/styles/material/palette.const.scss
+++ b/frontend/src/config/styles/material/palette.const.scss
@@ -53,7 +53,7 @@ $app-palettes: (
         '200': #a1c2a1,
         '300': #7baa7b,
         '400': #5f975f,
-        '500': #438543, // Theodian green
+        '500': #438543, // Aethodian green
         '600': #3d7d3d,
         '700': #347234,
         '800': #2c682c,
@@ -70,7 +70,7 @@ $app-palettes: (
         '200': #d6abd6,
         '300': #c589c5,
         '400': #b86fb8,
-        '500': #ac56ac, // Theodian magenta
+        '500': #ac56ac, // Aethodian magenta
         '600': #a54fa5,
         '700': #9b459b,
         '800': #923c92,
