--- a/frontend/src/app/shared/fonts/fonts.module.scss
+++ b/frontend/src/app/shared/fonts/fonts.module.scss
@@ -1,5 +1,5 @@
 @import 'noto-sans.const';
-@import 'theodic-sans.const';
+@import 'aethodic-sans.const';
 
 // These temporary variables are used in the above files.  I'm setting them here to prevent them from being whatever font above comes last in the alphabet.
 $font-path: '/assets/res/fnt/';
